# qplan

./: .gitignore  Control.py  LICENSE.md  LICENSE.txt  Model.py  README.md  README.txt  Scheduler.py  View.py  azelplot.py  common.py  constraints.py  entity.py  filetypes.py  misc.py  pyproject.toml  q2ope.py  q_db.py  q_query.py  qcheck.cgi  qcheck.py  qexec.py  qplan.py  qplan_conda_environment.yml  qsim.py  setup.cfg  setup.py  t_schedule.py  test_misc.py
.github/workflows/: lint.yml  tests.yml
doc/manual/: qplan.rst
experiments/: t_schedule.py
notebooks/: QPlan target moon calculations.ipynb  Queue Database Examples.ipynb
plots/: airmass.py  polarsky.py  summary.py  zoompan.py
plugins/: AirMassChart.py  ControlPanel.py  Execute.py  FOCAS.py  HSC.py  InsCfgTab.py  Logger.py  OBListTab.py  PlBase.py  ProgramsTab.py  ProposalTab.py  QueueFileTab.py  Report.py  Resolution.py  SPCAM.py  Schedule.py  ScheduleTab.py  SlewChart.py  SumChart.py  WeightsTab.py
qplan/: Control.py  Model.py  Scheduler.py  View.py  common.py  constraints.py  entity.py  filetypes.py  main.py  misc.py  promsdb.py  q2ope.py  q_db.py  q_query.py  qcheck.cgi  qcheck.py  qsim.py  version.py
qplan/cfg/: HSC_cfg.py  __init__.py  email_cfg.py
qplan/plots/: airmass.py  polarsky.py  summary.py  zoompan.py
qplan/plugins/: AirMassChart.py  Builder.py  Command.py  ControlPanel.py  EnvCfgTab.py  Errors.py  Execute.py  FOCAS.py  HSC.py  InsCfgTab.py  Logger.py  OBListTab.py  PPCCfgTab.py  PPCReport.py  PlBase.py  ProgramsTab.py  ProposalTab.py  QNavi.py  QueueFileTab.py  Report.py  Resolution.py  SPCAM.py  Schedule.py  ScheduleTab.py  SlewChart.py  SumChart.py  TelCfgTab.py  TgtCfgTab.py  WeightsTab.py
qplan/tests/: test_calcpos_almanac.py  test_calcpos_result.py  test_misc.py
qplan/util/: calcpos.py  dates.py  eph_cache.py  make_release.py  paths.py  qdb_update.py  qsort.py  site.py
scripts/: fqa_report.py  qexec.py  qfiles2db.py  qplan
