[metadata]
name = qplan
description = Queue Planner software for Subaru Telescope
long_description = file: README.md
long_description_content_type = text/markdown
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.md
url = https://github.com/naojsoft/qplan
edit_on_github = False
github_project = naojsoft/qplan
keywords = astronomy, queue, planner, subaru, telescope
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.11
install_requires =
    pandas>=2.1.4
    xlrd>=2.0.1
    openpyxl>=3.1.2
    python-dateutil>=2.8.2
    ginga>=5.3.0
    qtpy>=2.4.1
    matplotlib>=3.8.0
    skyfield>=1.53
    joblib>=1.5.1
    pyyaml>=6.0.1
    pyerfa>=2.0.0
setup_requires =
    setuptools_scm
include_package_data = True
scripts =
    scripts/qplan
    scripts/qexec.py
    scripts/qfiles2db.py

[options.package_data]
qplan = doc/manual/*.rst
